# Domus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  RUNNING.md  alembic.ini  docker-compose.dev.local.yml  docker-compose.dev.yml  docker-compose.host.yml  docker-compose.release.yml  docker-compose.yml  docker.dev.yml  package.json  tsconfig.base.json
apps/api/: .gitignore  README.md  alembic.ini  dev.js  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_home_billing_settings.py  0003_device_state_composite_index.py
apps/api/backend/: __init__.py  main.py  models.py
apps/api/backend/api/: __init__.py  router.py
apps/api/backend/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/backend/automations/: engine.py  models.py  router.py  schemas.py  service.py
apps/api/backend/common/: enums.py  models.py  repository.py
apps/api/backend/core/: config.py  crypto.py  database.py  events.py  exceptions.py  logging.py  pagination.py  ratelimit.py  redis.py  security.py
apps/api/backend/db/: session.py
apps/api/backend/devices/: models.py  poller.py  router.py  schemas.py  service.py
apps/api/backend/energy/: router.py  schemas.py  service.py
apps/api/backend/homes/: models.py  router.py  schemas.py  service.py
apps/api/backend/integrations/: __init__.py  base.py  factory.py  lan_discovery.py  models.py  registry.py  router.py  schemas.py  service.py
apps/api/backend/models/: __init__.py  domain.py
apps/api/backend/mqtt/: service.py
apps/api/backend/notifications/: models.py  router.py  schemas.py  service.py
apps/api/backend/rooms/: models.py  router.py  schemas.py  service.py
apps/api/backend/scenes/: models.py  router.py  schemas.py  service.py
apps/api/backend/schemas/: __init__.py  auth.py  device.py
apps/api/backend/services/: __init__.py  auth_service.py  device_service.py
apps/api/backend/users/: router.py  schemas.py
apps/api/tests/: conftest.py  test_auth.py  test_automations.py  test_core.py  test_devices.py  test_energy.py  test_homes.py  test_integrations.py  test_lan_discovery.py  test_rbac.py  test_scenes.py  test_tapo_kasa.py  test_tuya_openapi.py
docker/: api.Dockerfile  (+8 more)
(+256 files in other folders)
