[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domus-api"
version = "0.1.0"
description = "Domus FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.0",
  "redis>=5.0.8",
  "python-multipart>=0.0.9",
  "httpx>=0.27.2",
  "websockets>=13.0.1",
  "email-validator>=2.2.0",
  "aiomqtt>=2.3.0",
  "slowapi>=0.1.9",
  "greenlet>=3.1.1",
  "python-kasa>=0.7.0",
  "tuyapy>=0.1.4"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.7",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "aiosqlite>=0.20.0"
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI Depends() in defaults is the framework idiom.
# UP042/UP046: PEP-695 StrEnum/Generic rewrites are risky with Pydantic generics.
ignore = ["B008", "UP042", "UP046"]
